--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
@@ -20,6 +21,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "husky": "latest",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
     "react": "18.2.0",
