--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,6 +20,6 @@ jobs:
 
       # run any `bun` or `bunx` command
       - run: bun install
-      - run: bunx prettier
+      - run: bun run format
       - run: bun test
       - run: bun run build
