--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
+    "format": "prettier --write .",
     "start": "next start",
     "prepare": "husky"
   },
