--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,14 @@ jobs:
   build:
     name: build
     runs-on: ubuntu-latest
+
+    env:
+      DATABASE_URL: "postgresql://postgres:password@localhost:5432/generate-routes"
+      NEXTAUTH_SECRET: ""
+      NEXTAUTH_URL: "http://localhost:3000"
+      GITHUB_CLIENT_ID: ""
+      GITHUB_CLIENT_SECRET: ""
+
     steps:
       # ...
       - uses: actions/checkout@v4
