--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,10 +16,10 @@ jobs:
 
     env:
       DATABASE_URL: "postgresql://postgres:password@localhost:5432/generate-routes"
-      NEXTAUTH_SECRET: ""
+      NEXTAUTH_SECRET: "placeholder"
       NEXTAUTH_URL: "http://localhost:3000"
-      GITHUB_CLIENT_ID: ""
-      GITHUB_CLIENT_SECRET: ""
+      GITHUB_CLIENT_ID: "placeholder"
+      GITHUB_CLIENT_SECRET: "placeholder"
 
     steps:
       # ...
