--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
+    "tsup": "^8.0.2",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
