--- a/cli/package.json
+++ b/cli/package.json
@@ -4,7 +4,8 @@
   "exports": "./dist/index.js",
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch"
+    "dev": "tsup --watch",
+    "format": "prettier --write ."
   },
   "bin": "./dist/index.js",
   "devDependencies": {
