Combine into single file

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: CLI Node.js Checks
+name: Main Node.js Checks
 
 on:
   push:
@@ -10,7 +10,28 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  build-main:
+    name: build-main
+    runs-on: ubuntu-latest
+
+    env:
+      DATABASE_URL: "postgresql://postgres:password@localhost:5432/generate-routes"
+      NEXTAUTH_SECRET: "placeholder"
+      NEXTAUTH_URL: "http://localhost:3000"
+      GITHUB_CLIENT_ID: "placeholder"
+      GITHUB_CLIENT_SECRET: "placeholder"
+
+    steps:
+      # ...
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v1
+
+      # run any `bun` or `bunx` command
+      - run: bun install
+      - run: bun run format
+      - run: bun test
+      - run: bun run build
+  build-cli:
     name: build-cli
     runs-on: ubuntu-latest
 
