--- a/.github/workflows/cli.node.js.yml
+++ b/.github/workflows/cli.node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Server Checks
+name: CLI Checks
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   cli:
-    name: Format & build the CLI tool.
+    name: Format & build the CLI tool
     runs-on: ubuntu-latest
 
     steps:
