Change working directory, remove build

--- a/.github/workflows/cli.node.js.yml
+++ b/.github/workflows/cli.node.js.yml
@@ -14,12 +14,13 @@ jobs:
     name: Format & build the CLI tool
     runs-on: ubuntu-latest
 
+    env:
+      working-directory: ./cli
+
     steps:
       # ...
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
-
-        working-directory: ./cli
 
       # run any `bun` or `bunx` command
       - run: bun install
