Add prettier as dev dependency for CLI

--- a/cli/package.json
+++ b/cli/package.json
@@ -10,6 +10,7 @@
   "bin": "./dist/index.js",
   "devDependencies": {
     "@types/bun": "latest",
+    "prettier": "^3.2.5",
     "tsup": "^8.0.2"
   },
   "peerDependencies": {
