--- a/.github/workflows/server.node.js.yml
+++ b/.github/workflows/server.node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Server Checks
 
 on:
   push:
@@ -10,8 +10,8 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
-    name: build
+  server:
+    name: Format & build the main Next.js server
     runs-on: ubuntu-latest
 
     env:
