Add fake env vars to workflow

--- a/.github/workflows/server.node.js.yml
+++ b/.github/workflows/server.node.js.yml
@@ -20,6 +20,11 @@ jobs:
       NEXTAUTH_URL: "http://localhost:3000"
       GITHUB_CLIENT_ID: "placeholder"
       GITHUB_CLIENT_SECRET: "placeholder"
+      AWS_MASTER_USERNAME: "placeholder"
+      AWS_MASTER_PASSWORD: "placeholder"
+      AWS_ACCESS_KEY_ID: "placeholder"
+      AWS_SECRET_ACCESS_KEY: "placeholder"
+      AWS_SESSION_TOKEN: "placeholder"
 
     steps:
       # ...
