skeleton for endpoint and github router

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "axios": "^1.6.8",
     "husky": "latest",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
+    "octokit": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
