--- a/cli/package.json
+++ b/cli/package.json
@@ -10,6 +10,7 @@
   "bin": "./dist/index.js",
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/parse-git-config": "^3.0.4",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2"
   },
@@ -17,8 +18,12 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/inquirer": "^9.0.7",
     "bun": "^1.1.8",
+    "execa": "^9.1.0",
     "inquirer": "^9.2.21",
-    "install": "^0.13.0"
+    "install": "^0.13.0",
+    "parse-git-config": "^3.0.0",
+    "prisma": "^5.14.0"
   }
 }
