--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "husky": "latest",
+    "inquirer": "^9.2.22",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
+    "parse-github-url": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
