--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/inquirer": "^9.0.7",
     "husky": "latest",
     "inquirer": "^9.2.22",
     "next": "^14.2.1",
