--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@types/inquirer": "^9.0.7",
+    "@types/parse-git-config": "^3.0.4",
     "husky": "latest",
     "inquirer": "^9.2.22",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
+    "parse-git-config": "^3.0.0",
     "parse-github-url": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
