--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/inquirer": "^9.0.7",
+    "@types/parse-git-config": "^3.0.4",
+    "execa": "^9.1.0",
     "husky": "latest",
+    "inquirer": "^9.2.22",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
+    "parse-git-config": "^3.0.0",
+    "parse-github-url": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
