--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "inquirer": "^9.2.22",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
+    "octokit": "^4.0.2",
     "parse-git-config": "^3.0.0",
     "parse-github-url": "^1.0.2",
     "react": "18.2.0",
