Feature/create webhook route (#6)
* skeleton for endpoint and github router

* testing endpoint

* endpoint for webhook post request

* Fix linting

* Add gitattributes

* Remove bun lockb

* Add bun.lockb to gitignore

* Remove package lock, fix lint

* Add lockb to gitignore

* Delete bun.lockb

* CLI Program (#7)

* wrote ts but the build isnt working

* working cli

* generates basic prisma schema

* generates basic prisma schema

* Add some github repo stuff

* Changes

* Add inquirer types

* Try diff working directory

* Add dependencies

* Add to prettierignore

* Add execa

---------

Co-authored-by: Nate Sawant <natesawant@gmail.com>

* skeleton for endpoint and github router

* Fix linter error

* change api id to env variable

* Add octokit

---------

Co-authored-by: Nate Sawant <natesawant@gmail.com>
Co-authored-by: kaamil2 <87876889+kaamil2@users.noreply.github.com>

--- a/cli/.gitignore
+++ b/cli/.gitignore
@@ -9,6 +9,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+bun.lockb
 
 # Caches 
 
@@ -174,4 +175,4 @@ dist
 # Finder (MacOS) folder config
 .DS_Store
 
-bun.lockb
+*.lockb
