--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
+    "@aws-sdk/client-rds": "^3.572.0",
     "@prisma/client": "^5.10.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
@@ -27,15 +28,18 @@
     "execa": "^9.1.0",
     "husky": "latest",
     "inquirer": "^9.2.22",
+    "install": "^0.13.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
     "octokit": "^4.0.2",
     "parse-git-config": "^3.0.0",
     "parse-github-url": "^1.0.2",
+    "nextjs-cors": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "trpc-openapi": "^1.2.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
