--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
     "@aws-sdk/client-rds": "^3.572.0",
+    "@octokit/rest": "^20.1.1",
     "@prisma/client": "^5.10.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
@@ -31,10 +32,10 @@
     "install": "^0.13.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
+    "nextjs-cors": "^2.2.0",
     "octokit": "^4.0.2",
     "parse-git-config": "^3.0.0",
     "parse-github-url": "^1.0.2",
-    "nextjs-cors": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
