--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
     "@aws-sdk/client-rds": "^3.572.0",
+    "@octokit/rest": "^20.1.1",
     "@prisma/client": "^5.10.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
