kaamil + chris cook session

--- a/cli/package.json
+++ b/cli/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/parse-git-config": "^3.0.4",
+    "@types/parse-github-url": "^1.0.3",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2"
   },
@@ -24,6 +25,7 @@
     "inquirer": "^9.2.21",
     "install": "^0.13.0",
     "parse-git-config": "^3.0.0",
+    "parse-github-url": "^1.0.2",
     "prisma": "^5.14.0"
   }
 }
