--- a/cli/package.json
+++ b/cli/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/inquirer": "^9.0.7",
+    "axios": "^1.7.1",
     "bun": "^1.1.8",
     "execa": "^9.1.0",
     "inquirer": "^9.2.21",
