--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/git-url-parse": "^9.0.3",
     "@types/inquirer": "^9.0.7",
     "@types/parse-git-config": "^3.0.4",
+    "@types/parse-github-url": "^1.0.3",
     "execa": "^9.1.0",
+    "git-url-parse": "^14.0.0",
     "husky": "latest",
     "inquirer": "^9.2.22",
     "install": "^0.13.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
+    "nextjs-cors": "^2.2.0",
     "octokit": "^4.0.2",
     "parse-git-config": "^3.0.0",
     "parse-github-url": "^1.0.2",
-    "nextjs-cors": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
