Better AWS Endpoints (#10)
* Get database endpoint

* Add AWS stuff

* Fix issues

* Updated the routes (#9)

* Updated the routes

* Pushing small changes

* Um

* Updated Libraries

---------

Co-authored-by: Ansh P <39590072+patela22@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/git-url-parse": "^9.0.3",
     "@types/inquirer": "^9.0.7",
     "@types/parse-git-config": "^3.0.4",
+    "@types/parse-github-url": "^1.0.3",
     "execa": "^9.1.0",
+    "git-url-parse": "^14.0.0",
     "husky": "latest",
     "inquirer": "^9.2.22",
     "install": "^0.13.0",
