--- a/.github/workflows/server.node.js.yml
+++ b/.github/workflows/server.node.js.yml
@@ -15,16 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DATABASE_URL: "postgresql://postgres:password@localhost:5432/generate-routes"
-      NEXTAUTH_SECRET: "placeholder"
-      NEXTAUTH_URL: "http://localhost:3000"
-      GITHUB_CLIENT_ID: "placeholder"
-      GITHUB_CLIENT_SECRET: "placeholder"
-      AWS_MASTER_USERNAME: "placeholder"
-      AWS_MASTER_PASSWORD: "placeholder"
-      AWS_ACCESS_KEY_ID: "placeholder"
-      AWS_SECRET_ACCESS_KEY: "placeholder"
-      AWS_SESSION_TOKEN: "placeholder"
+      SKIP_ENV_VALIDATION: TRUE
 
     steps:
       # ...
